Code refactored - Grid layout added Css replaced by Bootstrap Css improved & refactored - Dynamic footer added FontAwesome images added Social bar service added via DI - Db moved from local to VDS (PostgreSQL)

--- a/Project 19.8/appsettings.json
+++ b/Project 19.8/appsettings.json
@@ -5,8 +5,52 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "ContactsContext": "Server=(localdb)\\mssqllocaldb;Database=ContactsContext-362787f8-9e0a-45e9-beb5-b4bb7e5d851e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ContactsContext": "Host=94.228.114.196;Port=5432;Database=project_19;Username=netapp;Password=qaz123WSX!-"
+    //"ContactsContext": "Server=(localdb)\\mssqllocaldb;Database=ContactsContext-362787f8-9e0a-45e9-beb5-b4bb7e5d851e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "SocialBar": {
+    "Scripts": [
+      {
+        "url": "//kit.fontawesome.com/cb4aa395a0.js",
+        "crossorigin": "anonymous"
+      }
+    ],
+    "Buttons": [
+      {
+        "url": "//vk.com/svyatrozhkov",
+        "icss": "fab fa-vk",
+        "color": "#0177ff",
+        "title": "vk"
+      },
+      {
+        "url": "//t.me/svyatseverskiy",
+        "icss": "fab fa-telegram",
+        "color": "#38a6db",
+        "title": "telegram"
+      },
+      {
+        "url": "//www.instagr.am/svyatrozhkov",
+        "icss": "fab fa-instagram",
+        "color": "#e0016b",
+        "title": "instagram"
+      },
+      {
+        "url": "//wa.me/79134013111",
+        "icss": "fab fa-whatsapp",
+        "color": "#59ce72",
+        "title": "whatsapp"
+      },
+      {
+        "url": "//github.com/rozhkovsvyat",
+        "icss": "fab fa-github",
+        "color": "#333333",
+        "title": "github"
+      }
+    ]
   }
 }
