--- a/Project 19.8/appsettings.json
+++ b/Project 19.8/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ContactsContext": "Host=94.228.114.196;Port=5432;Database=project_19;Username=netapp;Password=qaz123WSX!-"
-    //"ContactsContext": "Server=(localdb)\\mssqllocaldb;Database=ContactsContext-362787f8-9e0a-45e9-beb5-b4bb7e5d851e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApiContacts": "https://api.localhost/Contacts",
+    "ApiIdentity": "https://api.localhost/Identity"
   },
 
   "SocialBar": {
@@ -21,6 +21,12 @@
       }
     ],
     "Buttons": [
+      {
+        "url": "//hub.efcore.ru/PhonebookSetup.zip",
+        "icss": "fab fa-windows",
+        "color": "#ffc107",
+        "title": "windows"
+      },
       {
         "url": "//vk.com/svyatrozhkov",
         "icss": "fab fa-vk",
@@ -53,4 +59,4 @@
       }
     ]
   }
-}
+ }
