--- a/Project 19.8/Project 19.8.csproj
+++ b/Project 19.8/Project 19.8.csproj
@@ -4,16 +4,31 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Project_19._8</RootNamespace>
+    <RootNamespace>Project_19</RootNamespace>
+    <UserSecretsId>0ce46a3d-29f2-48d5-8104-944a6f613a5c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+    <None Remove="aspnetapp.crt" />
+    <None Remove="aspnetapp.rsa" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="aspnetapp.crt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="aspnetapp.rsa">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="RozhkovSvyat.Project19.Services.Api.ApiContacts" Version="1.2.9" />
+    <PackageReference Include="RozhkovSvyat.Project19.Services.Api.ApiIdentity" Version="1.1.9" />
+    <PackageReference Include="RozhkovSvyat.Project19.Services.UrlButtonService.SocialBar" Version="1.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,10 +41,6 @@
     <Content Update="dotnet-ef.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
